# kissa

./: .env.emplate  .gitignore  README.md
.github/workflows/: kissa-api-AutoDeployTrigger-07355db2-5cb0-4d22-b361-c0079a06b460.yml  kissa-api-AutoDeployTrigger-14731ed5-35f6-4c1f-a5ef-815519372304.yml  kissa-api-AutoDeployTrigger-4b6d7d2c-0246-48de-9b00-56d9d8671a04.yml  kissa-api-AutoDeployTrigger-5489139d-d567-4602-9bc1-da63e4884bca.yml  kissa-api-AutoDeployTrigger-6f676445-7954-43ec-815d-8d17ea42d724.yml  kissa-api-AutoDeployTrigger-fd362995-4030-4e9b-91ff-94b911c8ff5e.yml  kissa-api-dev-AutoDeployTrigger-556c21bd-4f16-4c1e-8956-974deb1c5f74.yml  kissa-api-dev-AutoDeployTrigger-56d7aa2f-bc35-40e6-b4c5-6d11a4f7c09a.yml  kissa-api-dev-AutoDeployTrigger-cf3556da-60d8-4411-a421-70d000d5b730.yml  kissa-web-AutoDeployTrigger-d8d0e5c1-0030-4012-9375-44c29c2bdd33.yml
backend/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
backend/app/: auth.py  auth_ops.py  database.py  main.py  match.py  models.py  pictures.py  profile.py  test.py  utils.py  vault.py
backend/tests/: access_protected.sh  delete_image.sh  get_image.sh  login.sh  register.sh  update_profile.sh  upload_image.sh
cloc/: cloc.sh
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  globals.js
frontend/src/components/: HSlider.js  Loading.js  Login.js
frontend/src/css/: Login.css
frontend/src/media/: cat2.avif  cat3.avif
frontend/src/pages/: MainPage.js  (+15 more)
infrastructure/: .terraform.lock.hcl  acr.tf  container.tf  cosmodb.tf  main.tf  providers.tf  seed.tf  vault.tf
(+8 files in other folders)
